--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/themes": "^1.1.2",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
