--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-stringify": "^10.0.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
