--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "remark": "^14.0.3",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.2",
     "remark-rehype": "^10.1.0",
     "remark-stringify": "^10.0.3",
     "tailwindcss": "3.3.3",
