--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark": "^14.0.3",
+    "rehype-stringify": "^9.0.4",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
-    "remark-html": "^15.0.2",
+    "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
-    "remark-stringify": "^10.0.3",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "husky": "^8.0.3",
