--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.4",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
