--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,1 +1,5 @@
-{}
+{
+  "importOrder": ["^(components|utils)/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
+}
