--- a/package.json
+++ b/package.json
@@ -35,8 +35,9 @@
     "unified": "^10.1.2"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "prettier": "3.0.2"
+    "prettier": "^3.0.2"
   }
 }
