--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "remark-rehype": "^10.1.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
-    "unified": "^10.1.2"
+    "unified": "^10.1.2",
+    "vfile-matter": "^5.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
