--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "remark-parse": "^10.0.2",
     "remark-rehype": "^10.1.0",
     "tailwindcss": "3.3.3",
+    "to-vfile": "^8.0.0",
     "typescript": "5.2.2",
     "unified": "^10.1.2",
     "vfile-matter": "^5.0.0"
