--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^1.1.2",
+    "@react-three/fiber": "^8.14.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -28,6 +29,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
+    "three": "^0.156.1",
     "to-vfile": "^8.0.0",
     "typescript": "5.2.2",
     "unified": "^10.1.2",
