--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^1.1.2",
+    "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.14.1",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
