--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
     "three": "^0.156.1",
+    "three-custom-shader-material": "^5.4.0",
     "to-vfile": "^8.0.0",
     "typescript": "5.2.2",
     "unified": "^10.1.2",
