--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "leva": "^0.9.35",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
