--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
+    "react-spring": "^9.7.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
