--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^1.1.2",
+    "@react-spring/three": "^9.7.3",
     "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.14.1",
     "@types/node": "20.5.7",
@@ -29,7 +30,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
-    "react-spring": "^9.7.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "3.3.3",
