--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@radix-ui/themes": "^1.1.2",
     "@react-spring/three": "^9.7.3",
+    "@react-three/csg": "^3.1.0",
     "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.14.1",
     "@types/node": "20.5.7",
