--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "leva": "^0.9.35",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/lodash": "^4.14.200",
     "@types/react-syntax-highlighter": "^15.5.7",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
