--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
   },
+  "engines": {
+    "node": "22.x"
+  },
   "dependencies": {
     "@radix-ui/themes": "^1.1.2",
     "@react-spring/three": "^9.7.3",
