--- a/package.json
+++ b/package.json
@@ -16,42 +16,43 @@
     "node": "22.x"
   },
   "dependencies": {
-    "@radix-ui/themes": "^1.1.2",
-    "@react-spring/three": "^9.7.3",
-    "@react-three/csg": "^3.1.0",
-    "@react-three/drei": "^9.82.0",
-    "@react-three/fiber": "^8.14.1",
-    "@types/node": "20.5.7",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "@use-gesture/react": "^10.3.0",
-    "autoprefixer": "10.4.15",
-    "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19",
-    "leva": "^0.9.35",
+    "@radix-ui/themes": "^3.2.1",
+    "@react-spring/three": "^10.0.1",
+    "@react-three/csg": "^4.0.0",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
+    "@tailwindcss/postcss": "^4.1.12",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@use-gesture/react": "^10.3.1",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
+    "eslint-config-next": "^15.5.2",
+    "leva": "^0.10.0",
     "lodash": "^4.17.21",
-    "next": "13.4.19",
-    "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1",
-    "tailwindcss": "3.3.3",
-    "three": "^0.156.1",
-    "three-custom-shader-material": "^5.4.0",
+    "next": "^15.5.2",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "remark-gfm": "^4.0.1",
+    "tailwindcss": "^4.1.12",
+    "three": "^0.179.1",
+    "three-custom-shader-material": "^6.3.7",
     "to-vfile": "^8.0.0",
-    "typescript": "5.2.2",
-    "unified": "^10.1.2",
+    "typescript": "^5.9.2",
+    "unified": "^11.0.5",
     "vextab": "^3.0.6",
-    "vfile-matter": "^5.0.0"
+    "vfile-matter": "^5.0.1"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/lodash": "^4.14.200",
-    "@types/react-syntax-highlighter": "^15.5.7",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.1",
-    "prettier": "^3.0.2"
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@types/lodash": "^4.17.20",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.5",
+    "prettier": "^3.6.2"
   }
 }
